<resources>
    <string name="app_name">BetterYou</string>
    <string name="editar">Editar</string>
    <string name="cerrar">Cerrar</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="fin">Fin</string>
    <string name="inicio">Inicio</string>
    <string name="ubicacion">Ubicación</string>
    <string name="borrar_dia">Borrar</string>
    <string name="guardar">Guardar</string>
</resources>