<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diario.DiarioActivity"
    android:background="@color/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/button_cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/cerrar"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/button_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/guardar"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <ImageButton
            android:id="@+id/button_borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/button_guardar"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/borrar_dia"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>